--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,35 @@
-.App {
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #23272f;
+  color: #f6f7f9;
+}
+
+h1 {
+  text-align: center;
+}
+
+.board {
   display: grid;
-  place-items: center;
+  grid-template-columns: 100px 100px 100px;
+  grid-template-rows: 100px 100px 100px;
+  cursor: pointer;
+  position: relative;
+}
+
+.tile {
+  color: currentColor;
+  font-size: 3em;
+  display: flex;
   justify-content: center;
   align-items: center;
-  font-weight: bold;
+}
+
+.right-border {
+  border-right: 0.2em solid #149eca;
+}
+
+.bottom-border {
+  border-bottom: 0.2em solid #149eca;
 }
