--- a/src/App.css
+++ b/src/App.css
@@ -88,6 +88,18 @@ h1 {
 .strike-diagonal-2 {
   width: 100%;
   height: 9px;
-  top: 50%;
-  transform: skewY(-45deg);
+  top: 47%;
+  transform: skewY(135deg);
+}
+
+.result {
+  text-align: center;
+  border: #343a46 none;
+  border-style: solid;
+  border-radius: 30px;
+  padding: 10px;
+  margin-top: 50px;
+  font-size: 1.5em;
+  background-color: #343a46;
+  color: #f6f7f9;
 }
