--- a/src/App.css
+++ b/src/App.css
@@ -101,5 +101,21 @@ h1 {
   margin-top: 50px;
   font-size: 1.5em;
   background-color: #343a46;
+}
+
+.reset-button {
+  width: 100%;
+  border: #343a46 none;
+  border-radius: 30px;
+  padding: 15px;
+  margin-top: 40px;
+  font-size: 1.5em;
+  background-color: #343a46;
   color: #f6f7f9;
+  cursor: pointer;
+}
+
+.reset-button:hover {
+  background-color: #283541;
+  color: #53c1de;
 }
